# paas

./: readme.md
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
paas_web/: README.md  pubspec.yaml
paas_web/.github/workflows/: beta_compile.yaml
paas_web/android/app/: build.gradle
paas_web/ios/Runner/: Info.plist
paas_web/lib/: main.dart  main_debug.dart  paas_web.dart
paas_web/lib/flutter/: image_flutter.dart
paas_web/lib/page/: chat.dart  home.dart  setting.dart  sign.dart  sign_o_auth.dart
paas_web/lib/widget/: floating_bar_widget.dart
paas_web/linux/: CMakeLists.txt
paas_web/macos/Runner.xcodeproj/: project.pbxproj
paas_web/release/: Dockerfile
paas_web/test/: widget_test.dart
paas_web/web/: index.html
paas_web/windows/: CMakeLists.txt
paas_web/windows/packagex/: .gitignore
package/paas/: README.md  pubspec.yaml
package/paas/lib/: paas.dart  paas_core.dart
package/paas_client/: pubspec.yaml
package/paas_client/test/: paas_client_test.dart
package/paas_dart/: README.md  pubspec.yaml
package/paas_dart/test/: paas_dart_test.dart
package/paas_flutter/: README.md  ffigen.yaml  pubspec.yaml
package/paas_flutter/src/: CMakeLists.txt
package/paas_platform_on_telegram_bot/: pubspec.yaml
package/paas_platform_on_whatsapp_bot/: pubspec.yaml
package/paas_platform_telegram_bot/: pubspec.yaml
package/paas_platform_whatsapp_bot/: pubspec.yaml
package/paas_server/: pubspec.yaml
package/paas_web/: README.md  pubspec.yaml
package/paas_web/web/: index.html  (+1 more)
services/paas_server/: .gitignore  Dockerfile  readme.md
(+88 files in other folders)
